fixed transport select input overlap with legend toggle on smaller screens

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,7 +7,7 @@ body{
 }
 
 /* mobile */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
   .dorling-loader{
       top: 45%!important;
       left: 40%!important;
@@ -58,7 +58,7 @@ body{
 }
 
 /* smaller screens: legend changes to toggle mode at 600px height */
-@media only screen and (max-height: 600px) {
+@media only screen and (max-height: 700px) {
   .dorling-insets{
     top: 5px !important;
     right: 40px !important;
@@ -86,7 +86,7 @@ body{
 }
 
 /* between 1050w and 600h the copyright hides crete and malta */
-@media only screen and (max-width: 1050px) and (max-height: 600px) {
+@media only screen and (max-width: 1050px) and (max-height: 700px) {
 .dorling-attribution{
   left:3px!important;
   right:unset!important;
@@ -172,7 +172,6 @@ body{
   position: absolute;
   top: 10px;
   right: 5px;
-
 }
 .dorling-overseas-caption{
   stroke-width:0.2;
